sass is added. anjlab-bootstrap-rails gem is added. devise is fixed.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,6 @@
  *= require_self
  *= require ./custom
  */
+$icon-font-path: "/assets/twitter/";
+@import 'font-awesome';
+@import "twitter/bootstrap";
