navbar links are updated

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#"><i class="icon-coffee"></i>Latted!</a>
+        <a class="navbar-brand" href="<%= root_url %>"><i class="icon-coffee"></i>Latted!</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -9,37 +9,15 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Link</a></li>
           <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
+
         </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
+          <% if current_user %>
+              <li><p class="navbar-text">Welcome, <%= current_user.email %></p></li>
+          <% end %>
+          <li><%= current_user ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Login", new_user_session_path) %></li>
+          <li><%= current_user ? "" : link_to("Register", new_user_registration_path) %></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
