--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,13 @@
 
     <%= render 'layouts/navigation' %>
 
-    <section class="container">
-        <%=yield %>
-    </section>
+    <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <%= yield %>
+          </div>
+        </div>
+    </div>
 
     <%= render "layouts/footer" %>
 </body>
