--- a/app/views/layouts/home_layout.html.erb
+++ b/app/views/layouts/home_layout.html.erb
@@ -15,7 +15,13 @@
 
     <%= render 'layouts/navigation' %>
 
-    <%=yield %>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
 
     <%= render "layouts/footer" %>
 </body>
