--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,113 +1,8 @@
-<section class="search-results">
-<div class="container">
 <div class="row">
-<aside class="span3">
-    <div class="widgets-container">
+  <div class="col-md-3">
+    <%= render 'users/sidebar' %>
+  </div>
+  <div class="col-md-9">
 
-        <div class="widget user-profile-widget">
-            <h4 class="title"><i class="icon-user icon-large"></i>&nbsp;<%= t 'User Profile' %></h4>
-            <div class="user-profile-image">
-                <a href="#"><img src="http://placehold.it/214x200" alt="Adds"></a>
-            </div>
-            <h5><%=@user.username%></h5>
-        </div>
-
-        <div class="widget">
-          <% if !@me && !current_user.nil? %>
-              <% if current_user.following?(@user).nil? %>
-                  <div class="user-follow">
-                    <%= link_to raw('<i class="icon-fire icon-large"></i>&nbsp;') + (t "Latte!"), follow_user_path(@user.id), :remote => true, :class => "btn btn-large follow-button"%>
-                    <%= link_to raw('<i class="icon-coffee icon-large"></i>&nbsp;') + (t "Delatte!"), unfollow_user_path(@user.id), :remote => true, :class => "btn btn-large unfollow-button", :style=> "display:none"%>
-                  </div>
-              <% else %>
-                  <div class="user-follow">
-                    <%= link_to raw('<i class="icon-fire icon-large"></i>&nbsp;') + (t "Latte!"), follow_user_path(@user.id), :remote => true, :class => "btn btn-primary btn-small btn-block follow-button hide"%>
-                    <%= link_to raw('<i class="icon-coffee icon-large"></i>&nbsp;') + (t "Delatte!"), unfollow_user_path(@user.id), :remote => true, :class => "btn btn-large unfollow-button"%>
-                  </div>
-              <% end %>
-          <% end %>
-        </div>
-        <!-- end widget -->
-
-        <div class="widget">
-            <ul class="unstyled tabs">
-              <li><a class="" href="#" data-tab="comments" data-title="<%= raw(t('User Comments')) %>"><i class="icon-star"></i><%= t 'Comments' %> </a></li>
-              <li><a class="" href="#" data-tab="tags" data-title="<%=  h t 'User Tags' %>"><i class="icon-tags"></i><%= t 'Tags' %> </a></li>
-            </ul>
-        </div>
-        <!-- end widget -->
-
-
-
-    </div>
-        <!-- end widgets-container -->
-</aside>
-<!-- end span3 -->
-
-
-<!-- ITEMS -->
-    <div class="search-result-title">
-        <div class="span9">
-          <div class="row-fluid">
-            <div class="span8">
-              <h4 class="title tab-title" ><%= "User Comments" %></h4>
-            </div>
-            <!-- end span8 -->
-            <div class="span4">
-              <div class="portfolio-controllers-container">
-                <p class="pull-left sort-title"><%= "Sort by" %> -</p>
-
-                <div class="btn-group">
-                  <button class="btn btn-large">Downloads</button>
-                  <button class="btn btn-large dropdown-toggle" data-toggle="dropdown">
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" id="filters">
-                    <!-- dropdown menu links -->
-                    <li><a href="#" data-filter="*" class="selected">Show All</a></li>
-                    <li><a href="#" data-filter=".transition">Size</a></li>
-                    <li><a href="#" data-filter=".metal">Price</a></li>
-                    <li><a href="#" data-filter=".alkali">Date</a></li>
-                  </ul>
-                </div>
-                <!-- end btn-group -->
-              </div>
-              <!-- end portfolio-controllers-container -->
-            </div>
-            <!-- end span4 -->
-
-          </div>
-          <!-- end row-fluid -->
-
-          <section class="top-images v2">
-            <div class="images-container v3">
-              <div class="row">
-                <div id="portfolio-container">
-
-
-                  <div id="user-tabs">
-                    <div class="row-fluid user-items comments" style="display: none" >
-                         Comments
-                    </div>
-                    <div class="row-fluid user-items tags" >
-                         Tags
-                    </div>
-                  </div>
-
-
-
-                </div>
-              </div>
-            </div>
-          </section>
-        </div>
-        <!-- end span9 -->
-    </div>
-    <!-- end search-result-title -->
-<!-- END ITEMS -->
-
+  </div>
 </div>
-<!-- end row -->
-</div> <!-- end container -->
-</section> <!-- end search-results -->
-
