--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,80 +1,8 @@
-<!-- ============================  FOOTER START ============================ -->
-
 <footer>
-  <div class="container">
-    <div class="row">
-      <div class="span4">
-        <div class="footer-widgets">
-          <h4 class="title">About iPictures</h4>
-          <p class="description">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
-          </p>
-          <a href="#" class="btn">Looking for Partnership?</a>
-        </div> <!-- end footer-widgets -->
-      </div> <!-- end span4 -->
-      <div class="span3">
-        <div class="footer-widgets">
-          <h4 class="title">Contact</h4>
-          <p class="description">
-            Single ZIP city, unique first letter of single street name: 19 Quaker Ridge Rd. Bethel CT 06801
-          </p>
-          <h4 class="title">Give us a Call</h4>
-          <div class="row-fluid">
-            <div class="span2">
-              <i class="icon-tablet icon-4x"></i>
-            </div>
-            <div class="span10">
-              <p>+1 (857) 545 854 85</p>
-              <p>+1 (589) 578 655 25</p>
-            </div>
-          </div>
-        </div> <!-- end footer-widgets -->
-      </div> <!-- end span3 -->
-      <div class="span3">
-        <div class="footer-widgets">
-          <h4 class="title">Weekly Newsletter</h4>
-          <form class="subscribe">
-            <fieldset>
-              <input type="text" placeholder="Name">
-              <input type="text" placeholder="Email">
-              <button type="submit" class="btn">Subscribe</button>
-            </fieldset>
-          </form>
-
-        </div> <!-- end footer-widgets -->
-      </div> <!-- end span3 -->
-      <div class="span2">
-        <div class="footer-widgets">
-          <h4 class="title">Press Resources</h4>
-          <ul class="unstyled">
-            <li><a href="#">Branding Guidelines</a></li>
-            <li><a href="#">Press Kit</a></li>
-            <li><a href="#">iPictures Logo</a></li>
-          </ul>
-          <h4 class="title">Social Networks</h4>
-          <ul class="unstyled inline">
-            <li><a class="fc-webicon facebook" href="#"></a></li>
-            <li><a class="fc-webicon twitter" href="#"></a></li>
-            <li><a class="fc-webicon googleplus" href="#"></a></li>
-          </ul>
-        </div> <!-- end footer-widgets -->
-      </div> <!-- end span2 -->
-    </div> <!-- end row -->
-  </div> <!-- end container -->
-</footer> <!-- end footer -->
-
-<div class="subfooter">
-  <div class="container">
-    <div class="row">
-      <div class="span1">
-        <a href="#" class="footer-logo"><img src="assets/img/logo2.png" alt="logo"></a>
-      </div> <!-- end span1 -->
-      <div class="span11">
-        <p class="copy">All contents &copy; copyright 1999-2013 iPictures, Inc. All rights reserved.</p>
-      </div> <!-- end span11 -->
-    </div> <!-- end row -->
-  </div> <!-- end container -->
-</div> <!-- end subfooter -->
-
-
-<!-- ============================  FOOTER ENDS ============================ -->
+  <div class="row">
+    <div class="col-lg-12">
+      <hr/>
+      <p class="pull-right">Latted © 2013 </p>
+    </div>
+  </div>
+</footer>
