--- a/app/views/users/follow.js.erb
+++ b/app/views/users/follow.js.erb
@@ -1,2 +1,4 @@
 $(".follow-button").hide();
-$(".unfollow-button").css("display", "block");
+$(".unfollow-button").show();
+
+//TODO update latters/latteds count
