--- a/app/views/users/unfollow.js.erb
+++ b/app/views/users/unfollow.js.erb
@@ -1,2 +1,4 @@
 $(".unfollow-button").hide();
-$(".follow-button").css("display", "block");
+$(".follow-button").show();
+
+//TODO update latters/latteds count
