user avatar is centered

--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="user-sidebar">
-  <div class="avatar">
+  <div class="avatar text-center">
     <a href="#"><img src="http://placehold.it/214x200" alt="Adds"></a>
   </div>
   <h4><i class="icon-user"></i>&nbsp;<%= @user.username %></h4>
