watched items are added to user profile page

--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -30,7 +30,7 @@
     </li>
     <li>
       <a href="#" data-tab="watched">
-        <i class="icon-user"></i>Watched <span class="badge pull-right">X</span></a>
+        <i class="icon-user"></i>Watched <span class="badge pull-right"><%= @user.items.count %></span></a>
     </li>
     <li>
       <a href="#" data-tab="rated">
