--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
-<footer>
+<div class="container">
   <div class="row">
     <div class="col-lg-12">
       <hr/>
       <p class="pull-right">Latted © 2013 </p>
     </div>
   </div>
-</footer>
+</div>
