--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,35 @@
 <% content_for :title, @item.title #set page title %>
 
-<div class="benim-satir">
+<div class="row">
+  <div class="col-lg-12">
+    <h3 class="item-title"><%=@item.title%></h3>
+    <div class="pull-right item-toolbar">
 
+    </div>
+  </div>
+</div>
 
+<div class="row">
+  <div class="col-lg-3 col-md-3 col-sm-3 item-sidebar">
+    <div class="item-poster">
+        <img src="http://placehold.it/260x400" alt="Movie Poster">
+    </div>
+
+    <div class="item-actions">
+       <%= bs_button_to "I've watched this", items_path, style: "primary btn-block" %>
+       <%= bs_button_to "Add to a list", items_path, style: "primary btn-block" %>
+    </div>
+    <div class="item-details">
+       Rating........5/10
+    </div>
+  </div>
+  <div class="col-lg-9  col-md-9 col-sm-9 item-content">
+    <%= render "items/show/slider" %>
+
+    <div class="item-comments">
+      <% @item.comments.each do |comment| %>
+          <%= render comment %>
+      <% end %>
+    </div>
+  </div>
 </div>
